--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,37 +33,25 @@ dependencies:
   cupertino_icons: ^1.0.8
   lottie: ^2.7.0
   shared_preferences: ^2.2.2
-  wear: ^4.1.0
   vector_math: ^2.1.4
-  flutter_compass: ^0.7.2
-  vector_graphics: ^1.1.11
-  vector_graphics_codec: ^1.1.11
-  vector_graphics_compiler: ^1.1.11
+  flutter_compass: ^0.8.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
-  flutter_test:
-    sdk: flutter
-  flutter_watch_app: ^0.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+  # Add the assets directory
+  assets:
+    - assets/
+  
+  # Enable Material Icons and basic theming
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
