--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ^3.9.2
+  flutter: ">=3.3.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,6 +36,8 @@ dependencies:
   shared_preferences: ^2.2.2
   vector_math: ^2.1.4
   flutter_compass: ^0.8.1
+  wear: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
