--- a/.gitattributes
+++ b/.gitattributes
@@ -1,41 +1,3 @@
-# Ne compter que les fichiers Dart pour les statistiques GitHub
+# Compter uniquement les fichiers .dart dans les stats de langage
 *.dart linguist-detectable=true
 * linguist-detectable=false
-
-# Ignorer les fichiers inutiles pour le dépôt
-*.iml -text
-*.log -text
-*.pyc -text
-*.pyo -text
-*.pyd -text
-*.so -text
-*.dll -text
-*.class -text
-*.jar -text
-*.war -text
-*.ear -text
-*.zip -text
-*.tar -text
-*.gz -text
-*.bz2 -text
-*.7z -text
-*.dmg -text
-*.iso -text
-*.msi -text
-*.msm -text
-*.msp -text
-*.doc -text
-*.xls -text
-*.ppt -text
-*.pdf -text
-*.png -text
-*.jpg -text
-*.jpeg -text
-*.gif -text
-*.bmp -text
-*.ico -text
-*.svg -text
-*.ttf -text
-*.eot -text
-*.woff -text
-*.woff2 -text
